--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "readme-generator",
   "version": "1.0.0",
+  "type": "module",
   "description": "A simple command-line application to generate a readme",
   "main": "index.js",
   "scripts": {
